Fixed multiple scrollbars

--- a/public/css/home.scss
+++ b/public/css/home.scss
@@ -27,12 +27,9 @@
 body,
 html {
   padding-top:30px;
-  height: 100vh;
+  max-width: 100%;
   overflow-x: hidden;
-  background-color: white;
   font-family: 'Karla','Courier New', Courier, monospace;  // background: #343838;
-  // overflow-y: scroll;
-  // scroll-snap-type: y mandatory;
 }
 
 .navbar {
